Fix bug in advance search toggle collapse, Switch documment badge color and add pointer

--- a/www/public_html/css/shipment.css
+++ b/www/public_html/css/shipment.css
@@ -1,2 +1,6 @@
 .dataTables_empty{
-    text-align: center;}
+    text-align: center;
+}
+.badge {
+    cursor: pointer;
+}
